--- a/src/themes/default/pages/create_server.ejs
+++ b/src/themes/default/pages/create_server.ejs
@@ -21,7 +21,7 @@
             <span class="text-sm">Free nodes require you to pay <%= settings.renewal.renew_fee %> coins to create a server, and require you to renew the server every 2 weeks.</span>
             <div class="mb-4 py-2">
                 <label for="name" class="leading-7 text-sm text-gray-400">Server Name</label>
-                <input type="text" id="name" name="name" class="w-full bg-white dark:bg-gray-600 dark:bg-opacity-20 focus:bg-transparent focus:ring-2 focus:ring-indigo-900 rounded border border-gray-600 focus:border-indigo-500 text-base outline-none text-gray-700 dark:text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" value="<%= data.userinfo.username %>'s server" required>
+                <input type="text" id="name" name="name" class="w-full bg-white dark:bg-gray-600 dark:bg-opacity-20 focus:bg-transparent focus:ring-2 focus:ring-indigo-900 rounded border border-gray-600 focus:border-indigo-500 text-base outline-none text-gray-700 dark:text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" value="<%= data.userInfo.username %>'s server" required>
             </div>
             <div class="mb-4">
               <label for="cpu" class="leading-7 text-sm text-gray-400">CPU</label>
