--- a/src/themes/default/pages/home.ejs
+++ b/src/themes/default/pages/home.ejs
@@ -12,7 +12,7 @@
     <div class="lg:w-2/6 md:w-1/2 bg-gray-100 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 dark:bg-gray-800 dark:bg-opacity-50">
       <h2 class="text-gray-900 text-lg font-medium title-font mb-5 dark:text-white">Continue as</h2>
       <div class="flex space-x-4">
-        <button onclick="window.location.href = '/dashboard'" class="flex-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg"><img class="inline-block h-7 w-7 rounded-full" src="https://cdn.discordapp.com/avatars/<%= data.userinfo.id %>/<%= data.userinfo.avatar %>.webp">&nbsp; <%= data.userinfo.username %></button>
+        <button onclick="window.location.href = '/dashboard'" class="flex-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg"><img class="inline-block h-7 w-7 rounded-full" src="https://cdn.discordapp.com/avatars/<%= data.userInfo.id %>/<%= data.userInfo.avatar %>.webp">&nbsp; <%= data.userInfo.username %></button>
         <button onclick="window.location.href = '/dashboard'" class="flex-auto text-black dark:text-white bg-white dark:bg-gray-900 border-0 py-2 px-8 focus:outline-none hover:bg-gray-50 dark:hover:bg-gray-800 rounded text-lg"><i class="fa-solid fa-door-open"></i>&nbsp;Logout</button>
       </div>
     </div>
