--- a/src/themes/default/pages/dashboard.ejs
+++ b/src/themes/default/pages/dashboard.ejs
@@ -87,7 +87,7 @@
                                     </thead>
                                     <tbody>
                                         <% let currentDate = Date.now() %>
-                                        <% for (let server of data.panelInfo.relationships.servers.data) { %>
+                                        <% for (let server of data.panel_info.relationships.servers.data) { %>
                                         <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
                                             <td class="py-4 px-6 text-sm text-gray-500 whitespace-nowrap dark:text-white">
                                                 <%= server.attributes.name.length> 15 ? server.attributes.name.slice(0, 12) + "..." : server.attributes.name %>
@@ -103,9 +103,9 @@
                                             </td>
                                             <td class="py-4 px-6 text-sm text-gray-500 whitespace-nowrap dark:text-white">
                                                 <% if (Object.entries(settings.eggs).filter(egg => server.attributes.egg == egg[1].info.egg).length == 1) { %>
-                                                    <% if (server_timers[server.attributes.id] && server_timers[server.attributes.id].action !== "???") { %>
+                                                    <% if (timers[server.attributes.id] && timers[server.attributes.id].action !== "???") { %>
                                                         <% // https://stackoverflow.com/questions/9763441/milliseconds-to-time-in-javascript
-                                                            let s = server_timers[server.attributes.id].timer - currentDate;
+                                                            let s = timers[server.attributes.id].timer - currentDate;
                                                             if (s < 0) s = 0;
                                                             let ms = s % 1000;
                                                             s = (s - ms) / 1000;
@@ -115,11 +115,11 @@
                                                             let hrs = (s - mins) / 60;
                                                             let output = hrs + ' hours';
                                                         %>
-                                                        <% if (server_timers[server.attributes.id].action == "auto") { %>
+                                                        <% if (timers[server.attributes.id].action == "auto") { %>
                                                             Automatically renewing in: <%= output %>
-                                                        <% } else if (server_timers[server.attributes.id].action == "suspend") { %>
+                                                        <% } else if (timers[server.attributes.id].action == "suspend") { %>
                                                             <%= output %>
-                                                        <% } else if (server_timers[server.attributes.id].action == "deletion") { %>
+                                                        <% } else if (timers[server.attributes.id].action == "deletion") { %>
                                                             Server deletion in: <%= output %><br><b>RENEW ASAP</b>
                                                         <% } %>
                                                     <% } else { %>
@@ -133,24 +133,21 @@
                                                     let renewcoststring;
                                                     renewcoststring = settings.renewal.renew_fee + " coin" + (settings.renewal.renew_fee == 1 ? "" : "s");
                                                 %>
-                                                <% if (server_timers[server.attributes.id] && server_timers[server.attributes.id].action !== "???") { %>
+                                                <% if (timers[server.attributes.id]?.action !== "???") { %>
                                                 <form action="/servers/renew/<%= server.attributes.id %>" method="POST">
                                                     <input type="submit" id="one" style="display: none" value="Renew (<%= renewcoststring %>)">
                                                 </form>
-
-                                                <% console.log(server) %>
-
                                                 <div class="flex space-x-4">
-                                                    <a href="<%= process.env.pterodactyl.domain%>/server/<%= server.attributes.identifier %>" class="flex-auto text-white bg-green-500 border-0 py-2 px-8 focus:outline-none hover:bg-green-600 rounded text-lg text-center">Access</a>
+                                                    <a href="<%= settings.pterodactyl.domain%>/server/<%= server.attributes.identifier %>" class="flex-auto text-white bg-green-500 border-0 py-2 px-8 focus:outline-none hover:bg-green-600 rounded text-lg text-center">Access</a>
                                                     <button onclick="document.getElementById('one').click()" type="submit" class="flex-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Renew</button>
-                                                    <% if (server_timers[server.attributes.id].action !== "deletion") { %> 
+                                                    <% if (timers[server.attributes.id]?.action !== "deletion") { %> 
                                                         <button onclick="document.getElementById('two').click()" type="submit" class="flex-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Auto-Renew</button>
                                                     <% } %>
                                                     <button onclick="document.getElementById('three').click()" type="submit" class="flex-auto text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg">Delete</button>
                                                     <button onclick="window.location.href = '/servers/modify?id=<%= server.attributes.id %>'" class="flex-auto text-white bg-yellow-300 border-0 py-2 px-8 focus:outline-none hover:bg-yellow-400 rounded text-lg">Modify </button>
-                                                <% if (server_timers[server.attributes.id].action !== "deletion") { %>
+                                                <% if (timers[server.attributes.id]?.action !== "deletion") { %>
                                                     <form action="/servers/auto_renew/<%= server.attributes.id %>" method="POST">
-                                                        <% let toggle_type = server_timers[server.attributes.id].action == "auto" ? "Disable" : "Enable" %>
+                                                        <% let toggle_type = timers[server.attributes.id]?.action == "auto" ? "Disable" : "Enable" %>
                                                         <input type="submit" style="display: none" id="two" value="<%= toggle_type %> automatic renewals.">
                                                     </form>
                                                     <% } %>
