--- a/src/themes/default/pages/components/navbar.ejs
+++ b/src/themes/default/pages/components/navbar.ejs
@@ -37,7 +37,7 @@
               </li>
             </ul>
             <div class="py-1">
-              <a href="/accounts/logout" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"><i class="fa-solid fa-door-open"></i>&nbsp;Logout</a>
+              <a href="/logout" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"><i class="fa-solid fa-door-open"></i>&nbsp;Logout</a>
             </div>
           </div>
           <script src="https://unpkg.com/@themesberg/flowbite@1.2.0/dist/flowbite.bundle.js"></script>
