fix(pages): patch empty variables display bug

--- a/src/themes/default/pages/components/variables.ejs
+++ b/src/themes/default/pages/components/variables.ejs
@@ -9,7 +9,7 @@
               <div class="p-4 mb-4 text-sm text-green-700 bg-green-100 rounded-lg dark:bg-green-200 dark:text-green-800" role="alert">
                 <%= eval(`\`${status_replies.success[variables.success]}\``) %>
               </div>
-          <% } else { %>
+          <% } else if (Object.entries(variables).length) { %>
               <div class="p-4 mb-4 text-sm text-blue-700 bg-blue-100 rounded-lg dark:bg-blue-200 dark:text-blue-800" role="alert">
                 <%= JSON.stringify(variables) %>
               </div>
