--- a/src/themes/default/pages/components/navbar.ejs
+++ b/src/themes/default/pages/components/navbar.ejs
@@ -4,7 +4,7 @@
       <% if(data) { %>
       <div class="flex md:order-2">
         <body>
-          <button id="dropdownInformationButton" data-dropdown-toggle="dropdownInformation" class="text-white font-medium rounded-lg text-sm px-4 py-2.5 text-center inline-flex items-center" type="button"><img class="inline-block h-7 w-7 rounded-full" src="https://cdn.discordapp.com/avatars/<%= data.user_info.id %>/<%= data.user_info.avatar %>.webp"></button>
+          <button id="dropdownInformationButton" data-dropdown-toggle="dropdownInformation" class="text-white font-medium rounded-lg text-sm px-4 py-2.5 text-center inline-flex items-center" type="button"><img class="inline-block h-7 w-7 rounded-full" src="https://cdn.discordapp.com/avatars/<%= data.user_info.id %>/<%= data.user_info.avatar %>"></button>
           <!-- Dropdown menu -->
           <div id="dropdownInformation" class="hidden z-10 w-44 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600">
             <div class="py-3 px-4 text-gray-900 dark:text-white">
