--- a/src/themes/default/pages/500.ejs
+++ b/src/themes/default/pages/500.ejs
@@ -1,5 +1,6 @@
 <%- include('./components/head') %>
-<html class="bg-white dark:bg-gray-900">
+  <title>Server Error | Dashactyl</title>
+  <html class="bg-white dark:bg-gray-900">
     <section class="text-gray-600 bg-white dark:text-gray-400 dark:bg-gray-900 body-font min-h-screen">
       <div class="container px-5 py-12 mx-auto flex flex-wrap items-center">
         <div class="lg:w-3/6 md:w-1/2 bg-gray-100 dark:bg-gray-800 dark:bg-opacity-50 rounded-lg p-8 flex flex-col md:mx-auto w-full mt-10 md:mt-0">
