--- a/src/themes/default/pages/create_server.ejs
+++ b/src/themes/default/pages/create_server.ejs
@@ -1,9 +1,9 @@
-
-<html class="bg-white dark:bg-gray-900">
-  <%- include('./components/head') %>
-  <%- include('./components/navbar') %>
-  <%- include('./components/variables') %>
-  <%- include('./components/resources') %>
+<%- include('./components/head') %>
+<%- include('./components/navbar') %>
+<%- include('./components/variables') %>
+<%- include('./components/resources') %>
+  <title>Create Server | Dashactyl</title>
+  <html class="bg-white dark:bg-gray-900">
     <% if (Object.entries(settings.locations).filter(loc => loc[1].enabled && (loc[1].package ? loc[1].package.includes(package.name) : true)).length == 0) { %>
       <section class="text-gray-600 bg-white dark:text-gray-400 dark:bg-gray-900 body-font min-h-screen">
         <div class="container px-5 py-12 mx-auto flex flex-wrap items-center">
@@ -12,16 +12,16 @@
             <button onclick="window.location.href = '/dashboard'" class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Return to Dashboard</button>
           </div>
         </div>
-    </section>
+      </section>
     <% } else { %>
-    <section class="text-gray-600 bg-white dark:text-gray-400 dark:bg-gray-900 body-font min-h-screen">
+      <section class="text-gray-600 bg-white dark:text-gray-400 dark:bg-gray-900 body-font min-h-screen">
         <form action="/servers/create" method="POST" class="container px-5 py-12 mx-auto flex flex-wrap items-center">
           <div class="lg:w-3/6 md:w-1/2 bg-gray-100 dark:bg-gray-800 dark:bg-opacity-50 rounded-lg p-8 flex flex-col md:mx-auto w-full mt-10 md:mt-0">
             <h2 class="text-gray-900 dark:text-white text-lg font-medium title-font mb-5">New Server</h2>
             <span class="text-sm">Free nodes require you to pay <%= settings.renewal.renew_fee %> coins to create a server, and require you to renew the server every 2 weeks.</span>
             <div class="mb-4 py-2">
-                <label for="name" class="leading-7 text-sm text-gray-400">Server Name</label>
-                <input type="text" id="name" name="name" class="w-full bg-white dark:bg-gray-600 dark:bg-opacity-20 focus:bg-transparent focus:ring-2 focus:ring-indigo-900 rounded border border-gray-600 focus:border-indigo-500 text-base outline-none text-gray-700 dark:text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" value="<%= data.userInfo.username %>'s server" required>
+              <label for="name" class="leading-7 text-sm text-gray-400">Server Name</label>
+              <input type="text" id="name" name="name" class="w-full bg-white dark:bg-gray-600 dark:bg-opacity-20 focus:bg-transparent focus:ring-2 focus:ring-indigo-900 rounded border border-gray-600 focus:border-indigo-500 text-base outline-none text-gray-700 dark:text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" value="<%= data.userInfo.username %>'s server" required>
             </div>
             <div class="mb-4">
               <label for="cpu" class="leading-7 text-sm text-gray-400">CPU</label>
@@ -54,7 +54,7 @@
             <button type="submit" class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Create Server</button>
           </div>
         </form>
-    </section>
+      </section>
     <% } %>
-  <%- include('./components/footer') %>
-</html>
+  </html>
+<%- include('./components/footer') %>
