feat(pages): set navbar name to homepage

--- a/src/themes/default/pages/components/navbar.ejs
+++ b/src/themes/default/pages/components/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 dark:bg-gray-800 fixed inset-x-0">
     <div class="container flex flex-wrap justify-between items-center mx-auto">
-      <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white">Dashactyl</span>
+      <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white"><a href="/">Dashactyl</a></span>
       <% if(data) { %>
       <div class="flex md:order-2">
         <body>
